[tool.poetry]
name = "comments-tree"
version = "0.1.0"
description = ""
authors = ["mago960806 <mago960806@hotmail.com>"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
length_sort = true
line_length = 120

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.17.6"
fastapi = "^0.78.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true